# advent-of-code-2022

./: 10.js  13.py  13b.py  14.py  17.py
in/: 19s.txt
js/: 01.js  02.js  03.js  04.js  05.js  06.js  07.js  10.js  11.js  12.js  13.js  package-lock.json  package.json
py/: 12.py  13.py  14.py  15-original.py  15.py  16.py  17.py  18.py  19.py  19b.py  20.py  21.py  22.py  25.py  pyproject.toml  util.py
