[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Carl Bennett <carl@sharesies.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"
networkx = "^2.8.8"
matplotlib = "^3.6.2"
advent-of-code-data = "^1.3.2"
browser-cookie3 = "^0.16.2"
black = "^22.12.0"
intervaltree = "^3.1.0"

[tool.black]
line-length = 111

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
